# ds1302-rs

./: Cargo.toml  LICENSE-MIT  README.md  memory.x
.cargo/: config
examples/: bluepill.rs  bluepill_serial.rs  bluepill_ssd1306.rs
src/: lib.rs  registers.rs
