[package]
name = "ds1302"
version = "0.1.1"
authors = ["Nekspire  <nekspire@gmail.com>"]
edition = "2018"
description = "A platform agnostic driver to interface with the DS1302 real time clock-calendar"
keywords = ["no-std", "ds1302", "rtc", "embedded", "embedded-hal-driver"]
readme = "README.md"
documentation = "http://"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nekspire/ds1302-rs"
categories  = ["embedded", "hardware-support", "no-std"]

include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]

[dependencies]
embedded-hal = "0.2.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
