[package]
name = "ds1302"
version = "2.0.0"
authors = ["Nekspire  <nekspire@gmail.com>"]
edition = "2018"
description = "A platform agnostic driver to interface with the DS1302 real time clock-calendar"
keywords = ["no-std", "ds1302", "rtc", "embedded", "embedded-hal-driver"]
readme = "README.md"
documentation = "https://docs.rs/ds1302"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nekspire/ds1302-rs"
categories  = ["embedded", "hardware-support", "no-std"]

include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]

[dependencies]
embedded-hal = "0.2.4"
nb = "1.0.0"
fugit = "0.3.0"

[dev-dependencies]
stm32f1xx-hal = {path = "examples/stm32f1xx-hal", version = "0.7.0", features = ["rt", "stm32f103", "medium"]}
cortex-m = "^0.6"
cortex-m-rt = ">=0.6.15"
embedded-graphics = "^0.6"
heapless = "^0.6"
ssd1306 = "^0.5"
panic-probe = { version = "^0.2", features = ["print-rtt"] }

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3

[[example]]
name = "bluepill_ssd1306"
crate-type = ["bin"]
